--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e6a48c23",
    "metadata": {},
    "outputs": [],
@@ -398,51 +398,387 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "15a6e7e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Article No.</th>\n",
+       "      <th>Pattern</th>\n",
+       "      <th>Shade No.</th>\n",
+       "      <th>WarpCount-WeftCount</th>\n",
+       "      <th>EPI-PPI</th>\n",
+       "      <th>Width</th>\n",
+       "      <th>Weave</th>\n",
+       "      <th>Print Design</th>\n",
+       "      <th>Print Color</th>\n",
+       "      <th>Style</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Weft Slippage</th>\n",
+       "      <th>Warp Seam Strength</th>\n",
+       "      <th>Weft Seam Strength</th>\n",
+       "      <th>Growth</th>\n",
+       "      <th>Elongation</th>\n",
+       "      <th>GSM</th>\n",
+       "      <th>Width.1</th>\n",
+       "      <th>Width.2</th>\n",
+       "      <th>Greige Width</th>\n",
+       "      <th>Pilling</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7496</th>\n",
+       "      <td>13200046</td>\n",
+       "      <td>CV+5DA</td>\n",
+       "      <td>RFP0000000</td>\n",
+       "      <td>32K.COM*32K.COM.VIS</td>\n",
+       "      <td>63*48</td>\n",
+       "      <td>179.5</td>\n",
+       "      <td>PLAIN $</td>\n",
+       "      <td>E002534F02</td>\n",
+       "      <td>R5A0000001</td>\n",
+       "      <td>REACTIVE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0MM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>136</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7497</th>\n",
+       "      <td>13200046</td>\n",
+       "      <td>CV+5DA</td>\n",
+       "      <td>RFP0000000</td>\n",
+       "      <td>32K.COM*32K.COM.VIS</td>\n",
+       "      <td>63*48</td>\n",
+       "      <td>179.5</td>\n",
+       "      <td>PLAIN $</td>\n",
+       "      <td>E002534F02</td>\n",
+       "      <td>R8C0000002</td>\n",
+       "      <td>REACTIVE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.5mm</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>136</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7498</th>\n",
+       "      <td>13200046</td>\n",
+       "      <td>CV+5DA</td>\n",
+       "      <td>RFP0000000</td>\n",
+       "      <td>32K.COM*32K.COM.VIS</td>\n",
+       "      <td>63*48</td>\n",
+       "      <td>179.5</td>\n",
+       "      <td>PLAIN $</td>\n",
+       "      <td>E002859Z03</td>\n",
+       "      <td>R300000001</td>\n",
+       "      <td>REACTIVE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>155.0</td>\n",
+       "      <td>155</td>\n",
+       "      <td>72.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7499</th>\n",
+       "      <td>13200046</td>\n",
+       "      <td>CV+5DA</td>\n",
+       "      <td>1000077981</td>\n",
+       "      <td>32K.COM*32K.COM.VIS</td>\n",
+       "      <td>63*48</td>\n",
+       "      <td>179.5</td>\n",
+       "      <td>PLAIN $</td>\n",
+       "      <td>E002201H01</td>\n",
+       "      <td>P400000002</td>\n",
+       "      <td>PIGMENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>fts</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>63.2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7500</th>\n",
+       "      <td>13200046</td>\n",
+       "      <td>CV+5DA</td>\n",
+       "      <td>1000078051</td>\n",
+       "      <td>32K.COM*32K.COM.VIS</td>\n",
+       "      <td>63*48</td>\n",
+       "      <td>179.5</td>\n",
+       "      <td>PLAIN $</td>\n",
+       "      <td>E002201H01</td>\n",
+       "      <td>P400000002</td>\n",
+       "      <td>PIGMENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>FTS</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>63.2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7852</th>\n",
+       "      <td>13200046</td>\n",
+       "      <td>CV+5DA</td>\n",
+       "      <td>RFP0000000</td>\n",
+       "      <td>32K.COM*32K.COM.VIS</td>\n",
+       "      <td>63*48</td>\n",
+       "      <td>179.5</td>\n",
+       "      <td>PLAIN $</td>\n",
+       "      <td>E002807E01</td>\n",
+       "      <td>PW00000001</td>\n",
+       "      <td>PIGMENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>stb</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>281.0</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>144.0</td>\n",
+       "      <td>142</td>\n",
+       "      <td>63.8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7853</th>\n",
+       "      <td>13200046</td>\n",
+       "      <td>CV+5DA</td>\n",
+       "      <td>RFP0000000</td>\n",
+       "      <td>32K.COM*32K.COM.VIS</td>\n",
+       "      <td>63*48</td>\n",
+       "      <td>179.5</td>\n",
+       "      <td>PLAIN $</td>\n",
+       "      <td>E003133G01</td>\n",
+       "      <td>P8C0000001</td>\n",
+       "      <td>PIGMENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>nf</td>\n",
+       "      <td>223.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>228.0</td>\n",
+       "      <td>149.0</td>\n",
+       "      <td>149</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7854</th>\n",
+       "      <td>13200046</td>\n",
+       "      <td>CV+5DA</td>\n",
+       "      <td>RFP0000000</td>\n",
+       "      <td>32K.COM*32K.COM.VIS</td>\n",
+       "      <td>63*48</td>\n",
+       "      <td>179.5</td>\n",
+       "      <td>PLAIN $</td>\n",
+       "      <td>C002953W01</td>\n",
+       "      <td>P700000006</td>\n",
+       "      <td>PIGMENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>stb</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>256.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>272.0</td>\n",
+       "      <td>149.0</td>\n",
+       "      <td>149</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7855</th>\n",
+       "      <td>13200046</td>\n",
+       "      <td>CV+5DA</td>\n",
+       "      <td>RFP0000000</td>\n",
+       "      <td>32K.COM*32K.COM.VIS</td>\n",
+       "      <td>63*48</td>\n",
+       "      <td>179.5</td>\n",
+       "      <td>PLAIN $</td>\n",
+       "      <td>E003165G02</td>\n",
+       "      <td>P5A0000002</td>\n",
+       "      <td>PIGMENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>158</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>143</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7856</th>\n",
+       "      <td>13200046</td>\n",
+       "      <td>CV+5DA</td>\n",
+       "      <td>RFP0000000</td>\n",
+       "      <td>32K.COM*32K.COM.VIS</td>\n",
+       "      <td>63*48</td>\n",
+       "      <td>179.5</td>\n",
+       "      <td>PLAIN $</td>\n",
+       "      <td>E001816F05</td>\n",
+       "      <td>R200000001</td>\n",
+       "      <td>REACTIVE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>229</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>241.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>136</td>\n",
+       "      <td>68.2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>361 rows × 31 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['CT+PF', 'CT+SF', 'CT+UVMM', 'CT+AB', 'CT+PDA', 'CT+PDALUF',\n",
-       "       'ST+PF', 'ST+SF', 'CT+8ET', 'CT+8WF', 'CT+ET', 'CT+8GSF',\n",
-       "       'CT+AMT6S', 'CT+PAMT6S', 'PC+SF', 'PC+WF', 'JCT+SF', 'JCT+5SF',\n",
-       "       'CT+DA', 'CT+SCL', 'CT+CH', 'ST+BRDA', 'CT+8PDA', 'CT+8PF',\n",
-       "       'CT+PNF', 'CT+8SF', 'ST+KPF', 'ST+PNF', 'ST+PST', 'ST+PCH',\n",
-       "       'ST+8SF', 'ST+AMT6S', 'ST+DA', 'CT+PAB', 'ST+8GSF', 'ST+8DA',\n",
-       "       'CT+8ET2', 'CT+8AB', 'CT+8AMT6S', 'CT+8SP', 'ST+8ET', 'ST+AB',\n",
-       "       'ST+8AV', 'JCM+SF', 'JCM+DA', 'CT+KSF', 'ST+8PF', 'SPC+SF',\n",
-       "       'SPC+PET', 'CT+LUF', 'CV+5DA', 'CT+72RCDA', 'SPC+OSF', 'BST+PAB',\n",
-       "       'CT+5SF', 'CV+5RF', 'CV+5SF', 'JV+DA', 'V+5JDA', 'V+5GDA',\n",
-       "       'JCV+SF', 'CV+5AB', 'JCV+DA', 'JCT+XF', 'PC+OPF', 'JV+SF', 'ST+WF',\n",
-       "       'CT+NF', 'TC+SF', 'JM+DA', 'JM+SF', 'CT+ZF', 'CT+SL', 'CL+SF',\n",
-       "       'PC+7SF', 'PC+CH', 'CT+BPF', 'CT+PST', 'ST+PDA', 'ST+PAB',\n",
-       "       'CT+RDA', 'ST+8ET2', 'ST+8WF', 'ST+8AMT6S', 'ST+ET', 'SPC+PCH',\n",
-       "       'ST+PET', 'SPC+CH', 'SPC+8CH', 'SPC+AM', 'SPC+8AM', 'V+5JSF',\n",
-       "       'FX+PF', 'CM+SF', 'CT+72RDA', 'PC+9SF', 'CT+T6S', 'ST+2RDA',\n",
-       "       'T+ABET', 'BSC4+PMMAB', 'V+SF', 'V+5SF', 'V+5DA', 'JV+AB',\n",
-       "       'T+ETDA', 'JV+XF', 'ST+KPCH', 'JV+KSF', 'SCM+PF', 'BST+AB',\n",
-       "       'V+5AB', 'SCM+8GPF', 'SPC+PF', 'JST+XF', 'CL+DA', 'CV+752RCDA',\n",
-       "       'CM+5SF', 'CV+5AMT6DA', 'CT+8MSW0', 'CT+PXF', 'CT+RDAPI', 'CT+8DA',\n",
-       "       'JM+AB', 'JM+AV', 'CT+5DA', 'CT+5AB', 'ST+8T6S', 'PM+SF', 'GV+DA',\n",
-       "       'CT+PSTDA', 'CT+RF', 'TC+ET', 'SPC+8WT6DZ', 'SPC+8WDAZ',\n",
-       "       'SPC+8WQDAZ', 'SPC+8WMIDZ', 'GSCN+75MM', 'SPC+8SF', 'ST+5JXF',\n",
-       "       'ST+7RF', 'ST+PXF', 'CM+752RDA', 'SPC+8WDAZF', 'CT+MM', 'PC+OSF',\n",
-       "       'SPC+8WTDZF', 'PC+5ST', 'SPC+78RWDA', 'PC+8WDA', 'SPC+AB',\n",
-       "       'GSCN+75SF', 'SPC+7GUV', 'GCN+75SF', 'GSCN+78WT6', 'GSCN+7SF',\n",
-       "       'CT+AV', 'JVM+SF', 'SC4+MM', 'JTC+XF', 'JMS+SF', 'CT+JSF',\n",
-       "       'CT+5CH', 'JV+XNFDA', 'PC+ET', 'JVCL+9SF', 'CT+BRF', 'JV+AMT6DA',\n",
-       "       'CL+CH', 'TCS+SF'], dtype=object)"
+       "     Article No. Pattern   Shade No.   WarpCount-WeftCount EPI-PPI  Width  \\\n",
+       "7496    13200046  CV+5DA  RFP0000000  32K.COM*32K.COM.VIS    63*48  179.5   \n",
+       "7497    13200046  CV+5DA  RFP0000000  32K.COM*32K.COM.VIS    63*48  179.5   \n",
+       "7498    13200046  CV+5DA  RFP0000000  32K.COM*32K.COM.VIS    63*48  179.5   \n",
+       "7499    13200046  CV+5DA  1000077981  32K.COM*32K.COM.VIS    63*48  179.5   \n",
+       "7500    13200046  CV+5DA  1000078051  32K.COM*32K.COM.VIS    63*48  179.5   \n",
+       "...          ...     ...         ...                   ...     ...    ...   \n",
+       "7852    13200046  CV+5DA  RFP0000000  32K.COM*32K.COM.VIS    63*48  179.5   \n",
+       "7853    13200046  CV+5DA  RFP0000000  32K.COM*32K.COM.VIS    63*48  179.5   \n",
+       "7854    13200046  CV+5DA  RFP0000000  32K.COM*32K.COM.VIS    63*48  179.5   \n",
+       "7855    13200046  CV+5DA  RFP0000000  32K.COM*32K.COM.VIS    63*48  179.5   \n",
+       "7856    13200046  CV+5DA  RFP0000000  32K.COM*32K.COM.VIS    63*48  179.5   \n",
+       "\n",
+       "        Weave Print Design Print Color     Style  ... Weft Slippage  \\\n",
+       "7496  PLAIN $   E002534F02  R5A0000001  REACTIVE  ...         2.0MM   \n",
+       "7497  PLAIN $   E002534F02  R8C0000002  REACTIVE  ...         1.5mm   \n",
+       "7498  PLAIN $   E002859Z03  R300000001  REACTIVE  ...            NF   \n",
+       "7499  PLAIN $   E002201H01  P400000002   PIGMENT  ...           fts   \n",
+       "7500  PLAIN $   E002201H01  P400000002   PIGMENT  ...           FTS   \n",
+       "...       ...          ...         ...       ...  ...           ...   \n",
+       "7852  PLAIN $   E002807E01  PW00000001   PIGMENT  ...           stb   \n",
+       "7853  PLAIN $   E003133G01  P8C0000001   PIGMENT  ...            nf   \n",
+       "7854  PLAIN $   C002953W01  P700000006   PIGMENT  ...           stb   \n",
+       "7855  PLAIN $   E003165G02  P5A0000002   PIGMENT  ...           158   \n",
+       "7856  PLAIN $   E001816F05  R200000001  REACTIVE  ...           229   \n",
+       "\n",
+       "      Warp Seam Strength  Weft Seam Strength  Growth  Elongation    GSM  \\\n",
+       "7496                 NaN                 NaN     NaN         NaN  124.0   \n",
+       "7497                 NaN                 NaN     NaN         NaN  121.0   \n",
+       "7498               123.0               167.0     NaN         NaN  128.0   \n",
+       "7499               126.0               167.0     NaN         NaN  104.0   \n",
+       "7500               126.0               164.0     NaN         NaN  110.0   \n",
+       "...                  ...                 ...     ...         ...    ...   \n",
+       "7852               160.0               281.0     2.8        12.0  172.0   \n",
+       "7853               223.0               300.0     3.2        15.6  228.0   \n",
+       "7854               175.0               256.0     3.6        12.0  272.0   \n",
+       "7855               135.0               200.0     NaN         NaN  119.0   \n",
+       "7856               112.0               241.0     NaN         NaN  138.0   \n",
+       "\n",
+       "      Width.1  Width.2  Greige Width  Pilling  \n",
+       "7496    136.0      136           0.0      NaN  \n",
+       "7497    136.0      136           0.0      NaN  \n",
+       "7498    155.0      155          72.5      NaN  \n",
+       "7499    150.0      150          63.2      NaN  \n",
+       "7500    150.0      150          63.2      NaN  \n",
+       "...       ...      ...           ...      ...  \n",
+       "7852    144.0      142          63.8      NaN  \n",
+       "7853    149.0      149           0.0      NaN  \n",
+       "7854    149.0      149           0.0      NaN  \n",
+       "7855    143.0      143           0.0      NaN  \n",
+       "7856    136.0      136          68.2      NaN  \n",
+       "\n",
+       "[361 rows x 31 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.Pattern.unique()"
+    "df[df['Article No.']=='13200046']"
    ]
   },
   {
@@ -456,7 +792,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -471,6 +807,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+   }
   }
  },
  "nbformat": 4,
