--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "e6a48c23",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "540c597e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "a1211012",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
        "[20975 rows x 31 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "15a6e7e7",
    "metadata": {},
    "outputs": [],
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "e883fb7d",
    "metadata": {},
    "outputs": [
@@ -495,13 +495,13 @@
        "0  140.0  76.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "epi_ppi = spec_article[['EPI','PPI']].sort_values(by='EPI', ascending=True)\n",
+    "epi_ppi = spec_article[['EPI','PPI']].sort_values(by='EPI')\n",
     "epi_ppi"
    ]
   },
