--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e6a48c23",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "540c597e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "a1211012",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
        "      <th>Elongation</th>\n",
        "      <th>GSM</th>\n",
        "      <th>Width.1</th>\n",
-       "      <th>F_Width</th>\n",
+       "      <th>Finish Width</th>\n",
        "      <th>Greige Width</th>\n",
        "      <th>Pilling</th>\n",
        "    </tr>\n",
@@ -383,23 +383,23 @@
        "20973               149.0               258.0     4.4        18.8  141.0   \n",
        "20974               239.0               260.0     NaN         NaN  190.0   \n",
        "\n",
-       "       Width.1  F_Width  Greige Width  Pilling  \n",
-       "0       144.65      143         65.70      NaN  \n",
-       "1         0.00      145         68.20      NaN  \n",
-       "2       143.00   142.24          0.00      4.0  \n",
-       "3       148.00      148         63.67      4.0  \n",
-       "4       138.00      138          0.00      NaN  \n",
-       "...        ...      ...           ...      ...  \n",
-       "20970   145.00      145          0.00      NaN  \n",
-       "20971   141.00      141          0.00      NaN  \n",
-       "20972   139.17      138         67.30      NaN  \n",
-       "20973   142.00      138          0.00      NaN  \n",
-       "20974     0.00      148          0.00      NaN  \n",
+       "       Width.1  Finish Width  Greige Width  Pilling  \n",
+       "0       144.65           143         65.70      NaN  \n",
+       "1         0.00           145         68.20      NaN  \n",
+       "2       143.00        142.24          0.00      4.0  \n",
+       "3       148.00           148         63.67      4.0  \n",
+       "4       138.00           138          0.00      NaN  \n",
+       "...        ...           ...           ...      ...  \n",
+       "20970   145.00           145          0.00      NaN  \n",
+       "20971   141.00           141          0.00      NaN  \n",
+       "20972   139.17           138         67.30      NaN  \n",
+       "20973   142.00           138          0.00      NaN  \n",
+       "20974     0.00           148          0.00      NaN  \n",
        "\n",
        "[20975 rows x 31 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,33 +411,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "15a6e7e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18278    134\n",
-       "18279    150\n",
-       "18280    139\n",
-       "18281    133\n",
-       "18282    133\n",
-       "18283    149\n",
-       "18284    149\n",
-       "18285    149\n",
-       "18286    150\n",
-       "18289    133\n",
-       "18295    134\n",
-       "18296    150\n",
-       "18297    140\n",
-       "18298    150\n",
-       "18299    138\n",
-       "18304    149\n",
-       "Name: F_Width, dtype: object"
+       "18278    134.0\n",
+       "18279    150.0\n",
+       "18280    139.0\n",
+       "18281      0.0\n",
+       "18282      0.0\n",
+       "18283    149.0\n",
+       "18284    149.0\n",
+       "18285    149.0\n",
+       "18286    150.0\n",
+       "18289      0.0\n",
+       "18295    134.0\n",
+       "18296    150.0\n",
+       "18297    140.0\n",
+       "18298    150.0\n",
+       "18299      0.0\n",
+       "18304    149.0\n",
+       "Name: Width.1, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,12 +445,12 @@
    "source": [
     "#spec_article = df[df[['Article No.']=='A150A567',df['Weave']=='2/1 S-TWILL']]\n",
     "spec_article = df.loc[(df['Article No.']=='A150A567')&(df['Finish']=='CT+SF')]\n",
-    "spec_article.F_Width"
+    "spec_article['Width.1']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "e883fb7d",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
        "18297  154.0  72.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "7d725ead",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
        "       124., 126., 126., 126., 154.])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "b106cca5",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,7 @@
        "Text(0, 0.5, 'PPI')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -653,8 +653,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "03681206",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "articles = df['Article No.'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "64e2e18c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "596"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(articles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be703c6e",
    "metadata": {},
    "outputs": [],
    "source": []
