tear values rectified

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e6a48c23",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "540c597e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a1211012",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "      <td>DWFL000344</td>\n",
        "      <td>DISCHARGE</td>\n",
        "      <td>...</td>\n",
-       "      <td>nf</td>\n",
+       "      <td>NF</td>\n",
        "      <td>111.0</td>\n",
        "      <td>231.0</td>\n",
        "      <td>NaN</td>\n",
@@ -135,7 +135,7 @@
        "      <td>DWFG000982</td>\n",
        "      <td>DISCHARGE</td>\n",
        "      <td>...</td>\n",
-       "      <td>nf</td>\n",
+       "      <td>NF</td>\n",
        "      <td>182.0</td>\n",
        "      <td>230.0</td>\n",
        "      <td>4.4</td>\n",
@@ -183,7 +183,7 @@
        "      <td>R2FB000531</td>\n",
        "      <td>REACTIVE</td>\n",
        "      <td>...</td>\n",
-       "      <td>nf</td>\n",
+       "      <td>NF</td>\n",
        "      <td>110.0</td>\n",
        "      <td>118.0</td>\n",
        "      <td>NaN</td>\n",
@@ -359,10 +359,10 @@
        "\n",
        "             Weave Print Design Print Color      Style  ... Weft Slippage  \\\n",
        "0      3/1 S-TWILL   F001539H01  P8FG000739    PIGMENT  ...           200   \n",
-       "1      3/1 S-TWILL   F004055D02  DWFL000344  DISCHARGE  ...            nf   \n",
-       "2      3/1 S-TWILL   F001687G03  DWFG000982  DISCHARGE  ...            nf   \n",
+       "1      3/1 S-TWILL   F004055D02  DWFL000344  DISCHARGE  ...            NF   \n",
+       "2      3/1 S-TWILL   F001687G03  DWFG000982  DISCHARGE  ...            NF   \n",
        "3      3/1 S-TWILL   E003032G03  DWFH000131  DISCHARGE  ...            NF   \n",
-       "4      3/1 S-TWILL   F003917E07  R2FB000531   REACTIVE  ...            nf   \n",
+       "4      3/1 S-TWILL   F003917E07  R2FB000531   REACTIVE  ...            NF   \n",
        "...            ...          ...         ...        ...  ...           ...   \n",
        "20970        PLAIN   C000781S01  P700000001    PIGMENT  ...           STB   \n",
        "20971        PLAIN   C002088W01  PW00000001    PIGMENT  ...           stb   \n",
@@ -399,7 +399,7 @@
        "[20975 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "15a6e7e7",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "Name: Width.1, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e883fb7d",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
        "18297  154.0  72.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "7d725ead",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
        "       124., 126., 126., 126., 154.])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b106cca5",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,7 @@
        "Text(0, 0.5, 'PPI')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "03681206",
    "metadata": {},
    "outputs": [],
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "64e2e18c",
    "metadata": {},
    "outputs": [
@@ -673,7 +673,7 @@
        "596"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,8 +684,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "be703c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Article No.', 'Finish', 'Shade No.', 'Warp*Weft', 'EPI*PPI', 'Width',\n",
+       "       'Weave', 'Print Design', 'Print Color', 'Style', 'Coverage group',\n",
+       "       'Fabric Finish', 'Warp Shrinkage', 'Weft Shrinkage', 'EPI', 'PPI',\n",
+       "       'Warp Tear', 'Weft Tear', 'Warp Tensile', 'Weft Tensile',\n",
+       "       'Warp Slippage', 'Weft Slippage', 'Warp Seam Strength',\n",
+       "       'Weft Seam Strength', 'Growth', 'Elongation', 'GSM', 'Width.1',\n",
+       "       'Finish Width', 'Greige Width', 'Pilling'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d4aace42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        13.51\n",
+       "1        21.27\n",
+       "2        14.82\n",
+       "3        14.40\n",
+       "4        11.03\n",
+       "         ...  \n",
+       "20970    19.12\n",
+       "20971    11.41\n",
+       "20972    12.88\n",
+       "20973    25.35\n",
+       "20974    17.02\n",
+       "Name: New Warp Tear, Length: 20975, dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['New Warp Tear'] = df['Warp Tear'].apply(lambda val: val/100 if val>1000 else(val/10 if val>100 else val))\n",
+    "df['New Warp Tear']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3515f369",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         9.30\n",
+       "1        19.01\n",
+       "2        16.15\n",
+       "3         6.99\n",
+       "4        10.99\n",
+       "         ...  \n",
+       "20970    24.06\n",
+       "20971    14.40\n",
+       "20972    17.97\n",
+       "20973    19.82\n",
+       "20974    11.94\n",
+       "Name: New Weft Tear, Length: 20975, dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['New Weft Tear'] = df['Weft Tear'].apply(lambda val: val/100 if val>1000 else(val/10 if val>100 else val))\n",
+    "df['New Weft Tear']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "63f6e6e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('Physical data with coverage2.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dbc19c8",
    "metadata": {},
    "outputs": [],
    "source": []
