--- a/main.ipynb
+++ b/main.ipynb
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d4aace42",
+   "id": "94559110",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3515f369",
+   "id": "846903cc",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "63f6e6e9",
+   "id": "5383bc71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,8 +788,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "c400c4bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Article No.</th>\n",
+       "      <th>Finish</th>\n",
+       "      <th>Shade No.</th>\n",
+       "      <th>Warp*Weft</th>\n",
+       "      <th>EPI*PPI</th>\n",
+       "      <th>Width</th>\n",
+       "      <th>Weave</th>\n",
+       "      <th>Print Design</th>\n",
+       "      <th>Print Color</th>\n",
+       "      <th>Style</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Weft Seam Strength</th>\n",
+       "      <th>Growth</th>\n",
+       "      <th>Elongation</th>\n",
+       "      <th>GSM</th>\n",
+       "      <th>Width.1</th>\n",
+       "      <th>Finish Width</th>\n",
+       "      <th>Greige Width</th>\n",
+       "      <th>Pilling</th>\n",
+       "      <th>New Warp Tear</th>\n",
+       "      <th>New Weft Tear</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13764</th>\n",
+       "      <td>A130B780</td>\n",
+       "      <td>JV+DA</td>\n",
+       "      <td>000000000P</td>\n",
+       "      <td>30K.COM.VIS.ECO*30K.COM.VIS.ECO</td>\n",
+       "      <td>68*60</td>\n",
+       "      <td>177.01</td>\n",
+       "      <td>PLAIN</td>\n",
+       "      <td>D003148K01</td>\n",
+       "      <td>P8A0000007</td>\n",
+       "      <td>PIGMENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>285.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>148</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>8.53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Article No. Finish   Shade No.                        Warp*Weft EPI*PPI  \\\n",
+       "13764    A130B780  JV+DA  000000000P  30K.COM.VIS.ECO*30K.COM.VIS.ECO   68*60   \n",
+       "\n",
+       "        Width  Weave Print Design Print Color    Style  ...  \\\n",
+       "13764  177.01  PLAIN   D003148K01  P8A0000007  PIGMENT  ...   \n",
+       "\n",
+       "      Weft Seam Strength  Growth  Elongation    GSM  Width.1  Finish Width  \\\n",
+       "13764              285.0     NaN         NaN  136.0    148.0           148   \n",
+       "\n",
+       "       Greige Width  Pilling  New Warp Tear  New Weft Tear  \n",
+       "13764           0.0      NaN           10.4           8.53  \n",
+       "\n",
+       "[1 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = df.sort_values(by=['Warp Tensile'], ascending = False)\n",
+    "new_df[new_df['Warp Tensile']>10000]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0dbc19c8",
+   "id": "17f736f5",
    "metadata": {},
    "outputs": [],
    "source": []
